--- a/css/styles.css
+++ b/css/styles.css
@@ -5,17 +5,9 @@
 	font-family: Arial;
 }
 
-html {
-	width: 100%;
-	height: 100%;
-	background: #071522; /* Old browsers */
-	background: -moz-linear-gradient(top,  #071522 0%, #192d40 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#071522), color-stop(100%,#192d40)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #071522 0%,#192d40 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #071522 0%,#192d40 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #071522 0%,#192d40 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #071522 0%,#192d40 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#071522', endColorstr='#192d40',GradientType=0 ); /* IE6-9 */
+body {
+	background-repeat: no-repeat;
+	background: #071522;
 }
 
 #wrap {
@@ -45,7 +37,7 @@ nav .menu li {
 nav .menu li a {
 	display: inline-block;
 	margin: 0;
-	padding: 10px 30px 15px 0;
+	padding: 10px 15px 15px 15px;
 	color: #fff;
 	font-size: 18px;
 	text-decoration: none;
@@ -61,6 +53,7 @@ nav .menu li a:hover {
 }
 
 #content {
+	display: inline-block;
 	width: 960px;
 	min-height: 200px;
 }
@@ -99,7 +92,7 @@ footer h3 {
 	color: #fff;
 	background: green;
 	border: 1px solid green;
-	font-size: 15px;
+	font-size: 12px;
 	font-weight: bold;
 	text-transform: uppercase;
 	text-align: center;
@@ -112,24 +105,34 @@ footer h3 {
 	width: 450px;
 }
 
-#new-session-form{
+#new-session-form {
 	margin-left: 20px;
 }
 
-#new-session-form .field {
+#new-session-form .field input { 
+	width: 70%;
+}
+
+.field {
 	margin: 0 0 10px 0;
 	width: 100%;
 }
 
-#new-session-form .field input[type=text],
-#new-session-form .field input[type=password] {
-	padding: 10px;
-	border: 1px solid #ccc;
-	width: 70%;
+.field label {
+	display: inline-block;
+	width: 220px;
+	color: #fff;
 }
 
-#new-session-form .field input[type=submit] {
+.field input[type=text],
+.field input[type=password] {
+	padding: 10px;
+	border: 1px solid #ccc;
+}
+
+.field input[type=submit] {
 	padding: 10px 25px;
+	width: 40% !important;
 	border: 1px solid green;
 	color: #fff;
 	background: green;
@@ -138,4 +141,14 @@ footer h3 {
 
 #new-session-form .field input[type=submit]:hover {
 	background: #01b201;
+}
+
+/*##########
+ ESTILOS DE REGISTRARSE
+##########*/
+
+.wrap-form {
+	margin: 50px auto;
+	padding: 0;
+	width: 400px;
 }
